[VAS-912] fix: Retrieve segregation code API (#46)
* [VAS-912] fixed get available segregation code API

* [VAS-912] updated unit tests

* [VAS-912] updated openapi

* [VAS-912] fixed logic

* [VAS-912] fixed unit tests

* [VAS-912] fixed code smells

* Bump to version 1.10.7-1-VAS-912-fix-segregation-code [skip ci]

* [VAS-912] fixed max segregation code value

* [VAS-912] added target ci tax code param to exclude used codes

* [VAS-1060] added new api to retrieve creditor institution associated to a station

* [VAS-1060] updated openapi

* [VAS-1060] added unit tests

* [VAS-1060] modified return type

* Bump to version 1.10.10-1-VAS-912-fix-segregation-code [skip ci]

* [VAS-912] updated openapi and properties

* Bump to version 1.10.10-2-VAS-912-fix-segregation-code [skip ci]

---------

Co-authored-by: pagopa-github-bot <github-bot@pagopa.it>