@@ -2,6 +2,7 @@ package it.gov.pagopa.apiconfig.selfcareintegration.service;
 
 import it.gov.pagopa.apiconfig.selfcareintegration.exception.AppError;
 import it.gov.pagopa.apiconfig.selfcareintegration.exception.AppException;
+import it.gov.pagopa.apiconfig.selfcareintegration.model.code.AvailableCodes;
 import it.gov.pagopa.apiconfig.selfcareintegration.model.code.CIAssociatedCode;
 import it.gov.pagopa.apiconfig.selfcareintegration.model.code.CIAssociatedCodeList;
 import it.gov.pagopa.apiconfig.selfcareintegration.model.creditorinstitution.CreditorInstitutionInfo;
@@ -11,7 +12,9 @@ import it.gov.pagopa.apiconfig.selfcareintegration.repository.ExtendedCreditorIn
 import it.gov.pagopa.apiconfig.selfcareintegration.util.Utility;
 import it.gov.pagopa.apiconfig.starter.entity.Pa;
 import it.gov.pagopa.apiconfig.starter.entity.PaStazionePa;
+import it.gov.pagopa.apiconfig.starter.entity.Stazioni;
 import it.gov.pagopa.apiconfig.starter.repository.PaRepository;
+import it.gov.pagopa.apiconfig.starter.repository.StazioniRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -24,8 +27,8 @@ import javax.validation.constraints.NotNull;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.LongStream;
 
@@ -36,11 +39,17 @@ import java.util.stream.LongStream;
 @Transactional
 public class CreditorInstitutionsService {
 
+    private static final String UNIONECAMERE_TAX_CODE = "01484460587";
+    private static final String ACI_TAX_CODE = "00493410583";
+    private static final String ROMA_CAPITALE_TAX_CODE = "02438750586";
+
     private final Integer applicationCodeMaxValue;
 
     private final Integer segregationCodeMaxValue;
 
     private final ExtendedCreditorInstitutionStationRepository ciStationRepository;
+
+    private final StazioniRepository stationRepository;
 
     private final PaRepository paRepository;
 
@@ -51,11 +60,13 @@ public class CreditorInstitutionsService {
             @Value("${sc-int.application_code.max_value}") Integer applicationCodeMaxValue,
             @Value("${sc-int.segregation_code.max_value}") Integer segregationCodeMaxValue,
             ExtendedCreditorInstitutionStationRepository ciStationRepository,
+            StazioniRepository stationRepository,
             PaRepository paRepository,
             ModelMapper modelMapper) {
         this.applicationCodeMaxValue = applicationCodeMaxValue;
         this.segregationCodeMaxValue = segregationCodeMaxValue;
         this.ciStationRepository = ciStationRepository;
+        this.stationRepository = stationRepository;
         this.paRepository = paRepository;
         this.modelMapper = modelMapper;
     }
@@ -85,38 +96,28 @@ public class CreditorInstitutionsService {
         return extractUsedAndUnusedCodes(alreadyUsedApplicationCodes, applicationCodeMaxValue, getUsed);
     }
 
-    public CIAssociatedCodeList getSegregationCodesFromCreditorInstitution(
-            @NotNull String creditorInstitutionCode, boolean getUsed, String service) {
-        String serviceSubstringToBeSearched = service != null ? service.toLowerCase() : null;
-        Pa pa = getPaIfExists(creditorInstitutionCode);
-        List<PaStazionePa> queryResult = ciStationRepository.findByFkPa(pa.getObjId());
-        Map<Long, PaStazionePa> alreadyUsedApplicationCodes =
-                queryResult.stream()
-                        .filter(station -> station.getSegregazione() != null)
-                        .collect(Collectors.toMap(PaStazionePa::getSegregazione, station -> station));
-        // get the set of codes to be obfuscated by service search. If passed service is null, the set
-        // is empty and all the element will be returned.
-        Set<String> codesToBeObfuscated =
-                queryResult.stream()
-                        .filter(
-                                station -> {
-                                    String serviceEndpoint = station.getFkStazione().getServizio();
-                                    return serviceSubstringToBeSearched != null
-                                            && (serviceEndpoint == null
-                                            || !serviceEndpoint.toLowerCase().contains(serviceSubstringToBeSearched));
-                                })
-                        .map(station -> station.getFkStazione().getIdStazione())
-                        .collect(Collectors.toSet());
-        // retrieving the data removing the ones to be obfuscated
-        CIAssociatedCodeList ciAssociatedCodeList =
-                extractUsedAndUnusedCodes(alreadyUsedApplicationCodes, segregationCodeMaxValue, getUsed);
-        if (ciAssociatedCodeList.getUsedCodes() != null) {
-            ciAssociatedCodeList.setUsedCodes(
-                    ciAssociatedCodeList.getUsedCodes().stream()
-                            .filter(usedCode -> !codesToBeObfuscated.contains(usedCode.getStationName()))
-                            .toList());
-        }
-        return ciAssociatedCodeList;
+    /**
+     * Retrieve the available segregation codes for the provided creditor institution's tax code
+     *
+     * @param ciTaxCode creditor institution's tax code
+     * @return the available segregation codes
+     */
+    public AvailableCodes getAvailableCISegregationCodes(@NotNull String ciTaxCode, String targetCITaxCode) {
+        Pa pa = getPaIfExists(targetCITaxCode);
+        List<PaStazionePa> stazionePaList = this.ciStationRepository.findByFkPa(pa.getObjId());
+
+        List<Long> usedSegregationCodes = getUsedSegregationCodes(stazionePaList);
+        List<Long> usedApplicationCodes = getUsedApplicationCodes(stazionePaList);
+
+        List<String> availableCodes = getAvailableCodesForCI(ciTaxCode).parallel()
+                .boxed()
+                .filter(num -> isNotReservedCode(num) && isUnusedCode(num, usedSegregationCodes, usedApplicationCodes))
+                .map(this::getCode)
+                .toList();
+
+        return AvailableCodes.builder()
+                .availableCodeList(availableCodes)
+                .build();
     }
 
     /**
@@ -139,7 +140,23 @@ public class CreditorInstitutionsService {
 
         return paList.stream()
                 .map(pa -> modelMapper.map(pa, CreditorInstitutionInfo.class))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    /**
+     * Retrieve the list of creditor institution's associated to a specific station
+     *
+     * @param stationCode station's code
+     * @return the list of creditor institution's tax codes
+     */
+    public List<String> getStationCreditorInstitutions(String stationCode) {
+        Stazioni station = this.stationRepository.findByIdStazione(stationCode)
+                .orElseThrow(() -> new AppException(AppError.STATION_NOT_FOUND, stationCode));
+
+        List<PaStazionePa> stazionePaList = this.ciStationRepository.findByFkStazione(station);
+        return stazionePaList.parallelStream()
+                .map(paStazionePa -> paStazionePa.getPa().getIdDominio())
+                .toList();
     }
 
     private CIAssociatedCodeList extractUsedAndUnusedCodes(
@@ -150,31 +167,26 @@ public class CreditorInstitutionsService {
         // existing association to station
         LongStream.rangeClosed(0, codeMaxValue)
                 .boxed()
-                .forEach(
-                        codeFromSequence -> {
-                            // generate model to be added
-                            CIAssociatedCode ciAssociatedCode =
-                                    CIAssociatedCode.builder()
-                                            .code(
-                                                    String.valueOf(
-                                                            codeFromSequence < 10
-                                                                    ? "0".concat(String.valueOf(codeFromSequence))
-                                                                    : codeFromSequence))
-                                            .build();
-                            // choose the list where must be added the model object
-                            if (alreadyUsedCodes.containsKey(codeFromSequence)) {
-                                ciAssociatedCode.setStationName(
-                                        alreadyUsedCodes.get(codeFromSequence).getFkStazione().getIdStazione());
-                                usedCodes.add(ciAssociatedCode);
-                            } else {
-                                unusedCodes.add(ciAssociatedCode);
-                            }
-                        });
-        // generate final object
+                .forEach(codeFromSequence -> {
+                    // choose the list where must be added the model object
+                    if (alreadyUsedCodes.containsKey(codeFromSequence)) {
+                        usedCodes.add(CIAssociatedCode.builder()
+                                .code(getCode(codeFromSequence))
+                                .stationName(alreadyUsedCodes.get(codeFromSequence).getFkStazione().getIdStazione())
+                                .build());
+                    } else {
+                        unusedCodes.add(CIAssociatedCode.builder().code(getCode(codeFromSequence)).build());
+                    }
+                });
+
         return CIAssociatedCodeList.builder()
                 .usedCodes(includeUsed ? usedCodes : null)
                 .unusedCodes(unusedCodes)
                 .build();
+    }
+
+    private String getCode(Long codeFromSequence) {
+        return codeFromSequence < 10 ? "0".concat(String.valueOf(codeFromSequence)) : String.valueOf(codeFromSequence);
     }
 
     /**
@@ -188,5 +200,36 @@ public class CreditorInstitutionsService {
             throw new AppException(AppError.CREDITOR_INSTITUTION_NOT_FOUND, creditorInstitutionCode);
         }
         return result.get();
+    }
+
+    private boolean isUnusedCode(Long num, List<Long> alreadyUsedSegregationCodes, List<Long> alreadyUsedApplicationCodes) {
+        return !alreadyUsedSegregationCodes.contains(num) && !alreadyUsedApplicationCodes.contains(num);
+    }
+
+    private boolean isNotReservedCode(Long num) {
+        return !num.equals(47L) && !num.equals(81L) && !num.equals(85L);
+    }
+
+    private List<Long> getUsedApplicationCodes(List<PaStazionePa> stazionePaList) {
+        return stazionePaList.parallelStream()
+                .map(PaStazionePa::getProgressivo)
+                .filter(Objects::nonNull)
+                .toList();
+    }
+
+    private List<Long> getUsedSegregationCodes(List<PaStazionePa> stazionePaList) {
+        return stazionePaList.parallelStream()
+                .map(PaStazionePa::getSegregazione)
+                .filter(Objects::nonNull)
+                .toList();
+    }
+
+    private LongStream getAvailableCodesForCI(String ciTaxCode) {
+        return switch (ciTaxCode) {
+            case ROMA_CAPITALE_TAX_CODE -> LongStream.of(49L);
+            case ACI_TAX_CODE -> LongStream.of(96L);
+            case UNIONECAMERE_TAX_CODE -> LongStream.of(97L);
+            default -> LongStream.rangeClosed(0, segregationCodeMaxValue);
+        };
     }
 }
